teraz convert dziala!:)
git-svn-id: file:///var/svn/r2/gallery@519 1cdba4cb-f672-4c4f-9aa2-86b72f4510c3